# santander_cod3rs

./: .gitignore  README.md  pyproject.toml
modulo_01/: ex.py
modulo_01/lista_01/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_06_v2.py  ex_06_v3.py  ex_07.py  ex_08.py  ex_08_v2.py
modulo_01/lista_02/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  teste.py
modulo_02/aula_05/: aula6_repo.sql  aula_5.sql
modulo_02/projeto_final/: analises.ipynb  ecommerce.ipynb
modulo_02/projeto_final/.ipynb_checkpoints/: descricao_projeto-checkpoint.ipynb  ecommerce-checkpoint.ipynb
modulo_03/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
notebooks/: Aula_1701.ipynb  Aula_1901.ipynb  Cópia_de_Projeto_LPII.ipynb
notebooks/.ipynb_checkpoints/: Aula_2201-checkpoint.ipynb  Cópia_de_Projeto_LPII-checkpoint.ipynb  Projeto_final-checkpoint.ipynb
