[tool.poetry]
name = "santander-cod3rs"
version = "0.1.0"
description = ""
authors = ["macedocoding <macedo@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.13"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
